<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:orientation="vertical">

<ImageView
        android:id="@+id/logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/logo" />


    <TextView
        android:id="@+id/teamMembersLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:autoLink="web"
        android:clickable="true"
        android:focusable="true"
        android:text="Our Team"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/aboutUsLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/teamMembersLink"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:autoLink="web"
        android:clickable="true"
        android:focusable="true"
        android:text="About Us"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/firstAidLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutUsLink"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:autoLink="web"
        android:clickable="true"
        android:focusable="true"
        android:text="First Aid Info"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/protocols"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstAidLink"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:autoLink="web"
        android:clickable="true"
        android:focusable="true"
        android:text="Protocols"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/updateProfileLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/protocols"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:autoLink="web"
        android:clickable="true"
        android:text="Update Profile"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/feedbackLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/updateProfileLink"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:autoLink="web"
        android:clickable="true"
        android:text="Feedback"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/ambulanceDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/feedbackLink"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:autoLink="web"
        android:clickable="true"
        android:text="Ambulance Details"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/emergencyRequest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ambulanceDetails"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:autoLink="web"
        android:clickable="true"
        android:text="Emergency Requests"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/viewPatients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emergencyRequest"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:autoLink="web"
        android:clickable="true"
        android:text="View Patients"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/communicationTool"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewPatients"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:autoLink="web"
        android:clickable="true"
        android:text="Communication Tools"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/medicalGuidelines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/communicationTool"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:autoLink="web"
        android:clickable="true"
        android:text="Medical Guidelines"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/medicalEducation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/medicalGuidelines"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:autoLink="web"
        android:clickable="true"
        android:text="Medical Education"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/logOutLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/medicalEducation"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:autoLink="web"
        android:clickable="true"
        android:text="Log Out"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="20sp" />

</RelativeLayout>