<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/emt"
    android:orientation="vertical"
    tools:context=".views.emt.EmtRegistrationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:background="@color/black" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="28dp"
        android:layout_marginBottom="-20dp"
        android:id="@+id/card_view"
        tools:ignore="VisualLintBounds">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="363dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=" Emergency Technician Login"
                android:textColor="@color/dark_blue"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailAddressTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email Address">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailAddressEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                app:counterEnabled="true"
                app:counterMaxLength="15"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:minHeight="48dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.7"
                    android:background="@color/blue" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/dark_blue"
                android:text="Login"
                android:textColor="@android:color/white"
                app:cornerRadius="32dp" />

            <TextView
                android:id="@+id/forgotPasswordLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="Forgot Password?"
                android:textColor="@color/dark_blue" />

            <TextView
                android:id="@+id/registerLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="Don't have an account? Register now!"
                android:textColor="@color/dark_blue" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>
